<!--
  ~
  ~  Copyright 2023 Esri
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  ~
  -->

<resources>
    <string name="server_trust_title">Untrusted host</string>
    <string name="server_trust_message">The server certificate for %1$s is not trusted. Connecting could compromise your data. Do you want to proceed?</string>
    <string name="cancel">Cancel</string>
    <string name="allow_connection">Allow connection</string>
    <string name="username_password_login_title">Authentication required</string>
    <string name="username_password_login_message">You need to sign in to access %1$s</string>
    <string name="incorrect_credentials">The credentials were incorrect for %1$s. Please try again.</string>
    <string name="sign_in_error_occurred">An error occurred signing in to %1$s. Please try again.</string>
    <!-- This text is a label on a textfield that can fit 23 chars -->
    <string name="username_label">Username</string>
    <!-- This text is a label on a textfield that can fit 23 chars -->
    <string name="password_label">Password</string>
    <!-- This text is on a button that can fit 24 chars -->
    <string name="sign_in">Sign in</string>
</resources>
